--- a/cycloid/Controls/Profile.xaml
+++ b/cycloid/Controls/Profile.xaml
@@ -35,21 +35,7 @@
                 </Canvas.Resources>
                 <Canvas x:Name="HorizontalRuler" IsHitTestVisible="False" />
                 <Path
-                    Stroke="{ThemeResource TrackHoverPointGraphOutline}"
-                    StrokeThickness="1.5"
-                    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(ViewModel.HoverPoint)}">
-                    <Path.Data>
-                        <GeometryGroup>
-                            <LineGeometry x:Name="HoverPointLine1" />
-                            <LineGeometry x:Name="HoverPointLine2" />
-                            <EllipseGeometry
-                                x:Name="HoverPointCircle"
-                                RadiusX="3"
-                                RadiusY="3" />
-                        </GeometryGroup>
-                    </Path.Data>
-                </Path>
-                <Path
+                    IsHitTestVisible="False"
                     Stroke="{ThemeResource TrackCurrentPointGraphOutline}"
                     StrokeThickness="1.5"
                     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(ViewModel.CurrentPoint)}">
@@ -67,6 +53,23 @@
             </Canvas>
         </ScrollViewer>
 
+        <Path
+            IsHitTestVisible="False"
+            Stroke="{ThemeResource TrackHoverPointGraphOutline}"
+            StrokeThickness="1.5"
+            Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(ViewModel.HoverPoint)}">
+            <Path.Data>
+                <GeometryGroup>
+                    <LineGeometry x:Name="HoverPointLine1" />
+                    <LineGeometry x:Name="HoverPointLine2" />
+                    <EllipseGeometry
+                        x:Name="HoverPointCircle"
+                        RadiusX="3"
+                        RadiusY="3" />
+                </GeometryGroup>
+            </Path.Data>
+        </Path>
+
         <Canvas x:Name="VerticalRuler" IsHitTestVisible="False" />
 
         <Grid Padding="5,5,5,5" HorizontalAlignment="Right">
@@ -80,7 +83,7 @@
                 Grid.Row="1"
                 HorizontalAlignment="Right"
                 Content="{ic:SymbolIcon Symbol=Highway}"
-                IsChecked="{x:Bind Mode=TwoWay, Path=ShowSurface}"/>
+                IsChecked="{x:Bind Mode=TwoWay, Path=ShowSurface}" />
             <StackPanel
                 Grid.Row="2"
                 VerticalAlignment="Bottom"
