--- a/cycloid/Controls/ProfileSelectionValues.xaml
+++ b/cycloid/Controls/ProfileSelectionValues.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
+    xmlns:ic="using:FluentIcons.Uwp"
     xmlns:ui="using:CommunityToolkit.WinUI"
     Margin="0,-65,0,0"
     VerticalAlignment="Top"
@@ -51,10 +52,10 @@
                     Grid.ColumnSpan="2"
                     HorizontalAlignment="Right"
                     Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Speed(Point.Speed)}" />
-                <FontIcon
+                <ic:SymbolIcon
                     Grid.Row="2"
                     FontSize="9"
-                    Glyph="&#xF0AD;" />
+                    Symbol="ArrowUp" />
                 <TextBlock
                     Grid.Row="2"
                     Grid.Column="1"
@@ -64,11 +65,11 @@
                     Grid.Column="2"
                     HorizontalAlignment="Right"
                     Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(Point.Descent)}" />
-                <FontIcon
+                <ic:SymbolIcon
                     Grid.Row="2"
                     Grid.Column="3"
                     FontSize="9"
-                    Glyph="&#xF0AE;" />
+                    Symbol="ArrowDown" />
 
             </Grid>
 
