--- a/cycloid/StartPage.xaml
+++ b/cycloid/StartPage.xaml
@@ -12,11 +12,9 @@
     <UserControl.Resources>
 
         <x:Double x:Key="PopupWidth">700</x:Double>
-        <x:Double x:Key="PopupHeight">390</x:Double>
+        <x:Double x:Key="PopupHeight">436</x:Double>
 
-        <Style
-            BasedOn="{StaticResource DefaultToggleButtonStyle}"
-            TargetType="ToggleButton">
+        <Style BasedOn="{StaticResource DefaultToggleButtonStyle}" TargetType="ToggleButton">
             <Setter Property="Width" Value="28" />
             <Setter Property="Height" Value="28" />
             <Setter Property="Padding" Value="0" />
@@ -68,7 +66,7 @@
                             FontSize="16"
                             Text="Get started" />
                         <ListView
-                            x:Name="Tracks"
+                            x:Name="TrackList"
                             Grid.Row="2"
                             DoubleTapped="Tracks_DoubleTapped"
                             ItemsSource="{x:Bind Mode=OneTime, Path=local:App.Current.ViewModel.TrackListItems}"
@@ -113,8 +111,8 @@
                                         <ToggleButton
                                             Grid.RowSpan="2"
                                             Grid.Column="2"
-                                            IsChecked="{x:Bind Mode=TwoWay, Path=IsPinned}"
-                                            VerticalAlignment="Center">
+                                            VerticalAlignment="Center"
+                                            IsChecked="{x:Bind Mode=TwoWay, Path=IsPinned}">
                                             <ToggleButton.Content>
                                                 <ic:SymbolIcon FontSize="14" Symbol="Pin" />
                                             </ToggleButton.Content>
